@@ -5,7 +5,7 @@
 ###
 ### Plot-method(s) for fitted hhh4() models
 ###
-### Copyright (C) 2010-2012 Michaela Paul, 2012-2016 Sebastian Meyer
+### Copyright (C) 2010-2012 Michaela Paul, 2012-2017 Sebastian Meyer
 ### $Revision$
 ### $Date$
 ################################################################################
@@ -457,7 +457,7 @@ createLambda <- function (object)
     } else {
         function (t) {
             stopifnot(isScalar(t) && t > 0 && t <= nTime)
-            Lambda <- meanHHH$ne.exppred[t,] * Wt(t)
+            Lambda <- meanHHH$ne.exppred[t,] * t(Wt(t))
             diag(Lambda) <- diag(Lambda) + meanHHH$ar.exppred[t,]
             Lambda
         }
@@ -726,7 +726,7 @@ getMaxEV_season <- function (x)
     createLambda <- function (t)
     {
         Lambda <- if ("ne" %in% components) {
-            exp(s2.phi$intercept + ri.phi + if(t==0) 0 else s2.phi$season[t]) * W
+            exp(s2.phi$intercept + ri.phi + if(t==0) 0 else s2.phi$season[t]) * t(W)
         } else matrix(0, nUnits, nUnits)
         if ("ar" %in% components) {
             diag(Lambda) <- diag(Lambda) + exp(s2.lambda$intercept + ri.lambda +
